syntax = "proto3";

package bank.v1;

option go_package = "github.com/lmkzero/simple-bank/api/bank/v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

service Bank {
    // CreateAccount 创建账户
    rpc CreateAccount (CreateAccountReq) returns (CreateAccountRsp) {
        option (google.api.http) = {
            post: "/accounts"
        };
    }
}

message CreateAccountReq {
    string owner = 1 [(validate.rules).string.min_len = 1];
    string currency = 2 [(validate.rules).string = {in: [
        "USD",
        "EUR"
      ]}];
}

message CreateAccountRsp {
	int64 id = 1;
    string owner = 2;
	int64 balance = 3;
	string currency = 4;
	google.protobuf.Timestamp create_at = 5;
}